--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,3 +7,9 @@ requires-python = ">=3.12"
 dependencies = [
     "mcp[cli]>=1.2.1",
 ]
+
+[dependency-groups]
+dev = [
+    "pytest>=8.3.4",
+    "pytest-asyncio>=0.25.3",
+]
