--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "mcp-memory-python"
+name = "mcp-memory-py"
 version = "0.1.0"
 description = "MCP server for enabling memory for Claude through a knowledge graph"
 readme = "README.md"
