--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,12 @@ requires-python = ">=3.12"
 dependencies = [
     "mcp[cli]>=1.2.1",
 ]
+license = "MIT"
+license-files = ["LICEN[CS]E*"]
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
 [dependency-groups]
 dev = [
