--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,9 @@ dependencies = [
 license = "MIT"
 license-files = ["LICEN[CS]E*"]
 
+[project.scripts]
+mcp-memory-py = "mcp_memory_py.__main__:main"
+
 [build-system]
 requires = ["hatchling", "uv-dynamic-versioning"]
 build-backend = "hatchling.build"
@@ -21,6 +24,7 @@ dev = [
     "pytest-cov>=6.0.0",
 ]
 
+[tool]
 [tool.pytest.ini_options]
 pythonpath = "src"
 
